--- a/index.html
+++ b/index.html
@@ -5,35 +5,36 @@
     <meta name"author" content"Robert Mariuson">
     <meta name"programming" content"programming, HTML, learn, school">
     <title>Fakebook</title>
+    <link rel="stylesheet" href="Fakebook.css">
 </head>
 <body>
 <h1>FAKEBOOK</h1>
 <form> Search: <input type="text" name="text" class="search" placeholder="Search by name"> </form>
 <h2>Róbert Már Maríuson</h2>
-<img src="https://en.wikiquote.org/wiki/Arnold_Schwarzenegger#/media/File:Arnold_Schwarzenegger_-_2019_(33730956438)_(cropped).jpg">
+<img src="https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTE5NDg0MDU1MTIyMTE4MTU5/arnold-schwarzenegger-9476355-1-402.jpg">
 <br>
 <br>
-<button>Add a Friend</button>
-<p><b>City:</b> Vienna</p>
+<button class="1button">Add a Friend</button>
+<p class="paragraph1"><b>City:</b> Vienna</p>
 <br>
-<p><b>Age:</b> 25+</p>
+<p class="paragraph2"><b>Age:</b> 25+</p>
 <br>
-<p><b>Education:</b> University of Iceland, Psychology degree</p>
+<p class="paragraph3"><b>Education:</b> University of Iceland, Psychology degree</p>
 <br>
-<p><b>Hobbies:</b></p>
-                    <ul>
+<p class="paragraph4"><b>Hobbies:</b></p>
+                    <ul class="list1">
                         <li>Training</li>
                         <li>Baking</li>
                         <li>Movies</li>
                         <ul>
-                          <li>Programming</li>
+                          <li class="list2">Programming</li>
                         </ul>
                     </ul>
 
 <br>
-<p><b>FB Friends:</b> 1+</p>
+<p class="paragraph5"><b>FB Friends:</b> 1+</p>
 <br>
-<p><b>FB Frenemies:</b> +2</p>
+<p class="paragraph6"><b>FB Frenemies:</b> +2</p>
 
 
 </body>
